spring-boot-microservices-demo/k8s/k8s.yaml

# deployment config for bank service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-service
spec:
  selector:
    matchLabels:
      app: bank-service
  replicas: 1
  template:
    metadata:
      labels:
        app: bank-service
    spec:
      containers:
      - name: bank-service
        image: barathece91/bank-service-eks-k8s
        ports:
          - containerPort: 8081
        resources:
              requests:
                memory: "1Gi"
                cpu: "250m"
              limits:
                memory: "2Gi"
                cpu: "500m"
            

---
# deployment config for customer service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
spec:
  selector:
    matchLabels:
      app: customer-service
  replicas: 1
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:   
      - name: customer-service
        image: barathece91/customer-service-eks-k8s
        ports:
        - containerPort: 8082
        resources:
              requests:
                memory: "1Gi"
                cpu: "250m"
              limits:
                memory: "2Gi"
                cpu: "500m"
---
kind: Service
apiVersion: v1
metadata:
  name: bank-service
spec:
  selector:
    app: bank-service
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
---
kind: Service
apiVersion: v1
metadata:
  name: customer-service
spec:
  selector:
    app: customer-service
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
